# Video-Hearings-App

./: .gitignore  README.md  docker-compose.yaml
backend/: .coveragerc  .env_sample  Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
backend/accounts/: admin.py  models.py
backend/accounts/management/commands/: data.py  seed_data.py
backend/accounts/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/cases/: admin.py  models.py  serializers.py  urls.py  views.py
backend/cases/migrations/: 0001_initial.py
backend/courts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/courts/migrations/: 0001_initial.py
backend/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/templates/: index.html
backend/tests/hearings/: conftest.py  factories.py  test_api.py  test_models.py
backend/utils/: redis_cache.py
backend/video_hearings/: apps.py  filters.py  models.py  serializers.py  urls.py
backend/video_hearings/migrations/: 0001_initial.py
backend/video_hearings/services/: hearing_service.py  upload_service.py
backend/video_hearings/views/: base.py  hearings.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/__mocks__/: axios.js
frontend/src/hooks/: useHearings.ts  useToast.ts
frontend/src/pages/: EditHearingPage.tsx  HearingDetailPage.tsx  HearingsPage.tsx
(+27 files in other folders)
