[project]
name = "backend"
version = "0.1.0"
description = "Video Hearings App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "channels[daphne]>=4.3.2",
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.15",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pylibmagic>=0.5.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "redis>=7.2.1",
    "u>=2.1",
    "uvicorn[standard]>=0.41.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "factory-boy>=3.3.3",
    "pytest==9.0.2",
    "pytest-django>=4.12.0",
    "pytest-factoryboy>=2.8.1",
    "ruff>=0.15.5",
    "tox>=4.47.3",
]
